# daman

./: .project  README.md  __init__.py  requirements.txt  setup.cfg  setup.py
daman/: __init__.py  config.py  data_manager.py  main.py  registery.py
daman/commands/: __init__.py  aws.py  clear.py  configure.py  delete.py  download.py  summary.py
daman/configure/: __init__.py  aws.py
daman/data/: __init__.py
daman/services/: __init__.py  aws.py  base.py
data_manager/: __init__.py  config.py  main.py  registery.py  utils.py
data_manager/configure/: __init__.py  aws.py
data_manager/services/: __init__.py  aws.py  base.py
