[metadata]
# replace with your username:
name = daman-sofiane87
version = 0.0.1
author = Sofiane Mahiou
author_email = mahiou.sofiane@gmail.com
description = "A simple package that allows for the direct use of data stored and managed on a cloud storage service"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sofiane87/daman
project_urls =
    Bug Tracker = https://github.com/sofiane87/daman/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
